Revert "Clean Code"
This reverts commit ef6a6a8b8192ab54fbe18461678a11a62bae3c04.